# gazebo_ogre_next_vendor

./: CHANGELOG.rst  CMakeLists.txt  ogre_next_vendor-extras.cmake.in  package.xml
patches/: 0001-Fix-incomplete-vulkan-linkage.patch
