<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gazebo_ogre_next_vendor</name>
  <version>2.3.3</version>
  <description>
    Wrapper around ogre3d, it provides a fixed CMake module and an ExternalProject build of ogre.
  </description>

  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- ogre is MIT (https://www.ogre3d.org/licensing) -->

  <url type="website">https://www.ogre3d.org/</url>

  <author email="mjcarroll@intrinsic.ai">Michael Carroll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <depend>libx11-dev</depend>
  <depend>libxaw</depend>
  <depend>libxrandr</depend>
  <depend>opengl</depend>
  <depend>libpoco-dev</depend>
  <depend>libfreetype-dev</depend>
  <depend>rapidjson-dev</depend>
  <depend>zziplib</depend>
  <depend>libx11-xcb-dev</depend>
  <depend>libxcb-randr0-dev</depend>
  <depend>libvulkan-dev</depend>
  <depend>sdl2</depend>
  <depend>tbb</depend>
  <depend>tinyxml2</depend>
  <depend>glslang-dev</depend>
  <depend>glslc</depend>
  <depend>libshaderc-dev</depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
